bobcat (2.17.01)

  * Added missing Stat::operator=(Stat const &other) member. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 14 Jun 2011 15:23:46 +0200

bobcat (2.17.00)

  * In accordance with C++0x's prototype of move members Bobcat's move
    constructors and move assignment operators now all use 'Class &&tmp'
    parameter definitions (where Class should be replaced by the actual
    class name). Previously defined members specifying 'Class const &&tmp'
    were retained for backward compatibility, but also generate a `deprecated'
    warning when used from, e.g., a dynamic library. If such a warning is
    generated the program dynamically linking to the bobcat library only needs
    to be recompiled to get rid of the message.

  * Added new series of function templates in the bobcat/binops header file,
    making available all binary arithmetic operators for classes already
    defining (a subset of) the binary assignment operators. The command `man
    -e bobcat binops' provides the details.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 06 Jun 2011 14:35:52 +0200

bobcat (2.16.00)

  * Removed obsolete bobcatlcgen

  * All previously inline implemented virtual members are now defined as
    non-inline members, which should solve an issue with compilers on armel
    architecture which don't handle inline virtual members correctly.

  * The 'build' script now uses the -g option by default (set in
    INSTALL.im). To modify the g++ compilation options change the #define
    CPPOPT in INSTALL.im. By default it is set to "-O2 -g". To modify the
    flags `on the fly' set the environment variable CPPFLAGS to the compiler
    options to use. The options "-isystem tmp -Wall" are always used and
    should not be altered.

bobcat (2.15.02)

  * Replaced the auto_ptr in Log by a unique_ptr. Since both have equal sizes
    and are only used in compiled sources (not in inline functions) no