@@ -5,7 +5,6 @@
 #include <algorithm>
 #include <openssl/ui.h>
 #include <bobcat/errno>
-#include <bobcat/fnwrap>
 #include <bobcat/fswap>
 
 namespace FBB
