@@ -6,8 +6,6 @@
 #include <iterator>
 
 #include <bobcat/errno>
-#include <bobcat/fnwrap>
-
 #include <bobcat/stringline>
 #include <bobcat/pattern>
 #include <bobcat/fswap>
