@@ -5,7 +5,10 @@ bool Cidr::match(istream &in)
     auto end = istream_iterator<StringLine>();
 
     return end != find_if(
-                      istream_iterator<StringLine>(in), end, 
-                      FnWrap::unary(matchLine, *this)
+                    istream_iterator<StringLine>(in), end, 
+                    [this](string const &line)
+                    {
+                        return this->matchLine(line);
+                    }
                   );
 }
