@@ -12,8 +12,10 @@ namespace FBB
 
 class CmdFinderBase
 {
-                                    // mask testing the Mode-validity
-    static size_t const s_all = (1 << 3) - 1;  
+    enum: size_t                    // mask testing the Mode-validity 
+    { 
+        s_all = (1 << 3) - 1
+    };  
 
     std::string d_cmd;
     std::string d_beyond;
