@@ -130,7 +130,7 @@ class ConfigFile
         void resetVsIter(std::string const &re);
         std::string searchFor(std::string const &keyPattern, size_t count);
 
-        static bool match(std::string const &str, Pattern &pat);
+//        static bool match(std::string const &str, Pattern &pat);
         static bool finder(std::string const &haystack, 
                            std::string const &needle);
         static bool casefinder(std::string const &haystack, 
