@@ -5,7 +5,6 @@
 #include <climits>
 #include <cstring>
 
-#include <bobcat/fnwrap>
 #include <bobcat/errno>
 #include <bobcat/fswap>
 
@@ -22,10 +21,4 @@ inline bool ConfigFile::casefinder(string const &haystack,
                                     string const &needle)
 {
     return strcasestr(haystack.c_str(), needle.c_str()) != 0;
-}
-
-
-inline bool ConfigFile::match(string const &str, Pattern &pat)
-{
-    return pat << str;
 }
