@@ -1,13 +1,12 @@
 #include "encryptbuf"
 
 #include <string>
-//#include <iomanip>
+#include <iomanip>
 #include <ostream>
 #include <algorithm>
 #include <openssl/evp.h>
 #include <bobcat/errno>
 #include <bobcat/irandstream>
-#include <bobcat/fnwrap>
 
 namespace FBB
 {
