@@ -1,12 +1,15 @@
 #include "mailheaders.ih"
 
 MailHeaders::const_iterator MailHeaders::const_hdr_iterator::lookup
-(
-    const_iterator const &begin
-) const
+                                        (const_iterator const &begin) const
 {
     const_iterator next = 
-    find_if(begin, d_mh->end(), 
-            FnWrap::unary(d_comparator, d_key));
+            find_if(
+                begin, d_mh->end(), 
+                [&, d_comparator](std::string const &header)
+                {
+                    return (*d_comparator)(header, d_key);
+                }
+            );
     return next;
 }
