@@ -2,7 +2,6 @@
 
 #include <algorithm>
 
-#include <bobcat/fnwrap>
 #include <bobcat/fswap>
 
 using namespace std;
