@@ -1,6 +1,5 @@
 #include "multistreambuf"
 
 #include <algorithm>
-#include <bobcat/fnwrap>
 
 using namespace FBB;
