@@ -12,8 +12,13 @@ Process::ExecContext Process::analyzeCommand()
                                             // set up a process struct
     ExecContext ec = {true, 0, 0, new char const *[count + 1]};
     
-    for_each(elements.begin(), elements.end(), 
-                               FnWrap::unary(execContext, ec));
+    for_each(
+        elements.begin(), elements.end(), 
+        [&](String::SplitPair const &splitPair)
+        {
+            execContext(splitPair, ec);
+        }
+    );
     
     if (!ec.ok)
         throw Errno("Process ") << d_command << ": " << ec.message;
