@@ -11,7 +11,6 @@
 
 #include <bobcat/errno>
 #include <bobcat/redirector>
-#include <bobcat/fnwrap>
 
 using namespace std;
 using namespace FBB;
