@@ -2,13 +2,18 @@
 
 ostream &FBB::operator<<(ostream &out, ReadLineHistory const &history)
 {
-    for_each(history.begin(), history.end(), 
-        FnWrap::unary(history.d_timestamps ? 
-                            ReadLineHistory::insertHistoryElement 
-                        :
-                            ReadLineHistory::insertLine,
-                        out));
-
+    for_each(
+        history.begin(), history.end(), 
+        [&](ReadLineHistory::HistoryElement const &he)
+        {
+            (
+                history.d_timestamps ? 
+                    ReadLineHistory::insertHistoryElement 
+                : 
+                    ReadLineHistory::insertLine
+            )(he, out);
+        }
+    );
     return out;
 }
 
