@@ -3,7 +3,5 @@
 #include <fstream>
 #include <algorithm>
 
-#include <bobcat/fnwrap>
-
 using namespace std;
 using namespace FBB;
