@@ -1,11 +1,8 @@
 #include "tablelines"
 
 #include <iostream>
-
 #include <iomanip>
-
 #include <algorithm>
-#include <bobcat/fnwrap>
 
 using namespace std;
 using namespace FBB;
