@@ -10,10 +10,21 @@ void TableSupport::setParam(std::ostream &ostr, size_t rows, size_t nColumns,
     
     d_tableWidth = accumulate(align.begin(), align.end(), 0);
 
-    for_each(d_elements.begin(), d_elements.end(), 
-        FnWrap::unary(setCols, d_nColumns));
+    for_each(
+        d_elements.begin(), d_elements.end(), 
+        [=](UMValue &elements)
+        {
+            elements.second.resize(rightSeparator(d_nColumns) + 1);  
+        }
+    );
 
-    for_each(d_sep.begin(), d_sep.end(), FnWrap::unary(add, d_tableWidth));
+    for_each(
+        d_sep.begin(), d_sep.end(), 
+        [&](std::string const &src)
+        {
+            d_tableWidth += src.length();  
+        }
+    );
 }
 
 
