@@ -148,9 +148,8 @@ class TableSupport
         static void leftType(size_t *target, size_t type);
         static void rightType(size_t *target, size_t type);
 
-        static void setCols(UMValue &elements, size_t nCols);
-
-        static void add(std::string const &src, size_t &dest);
+//        static void setCols(UMValue &elements, size_t nCols);
+//        static void add(std::string const &src, size_t &dest);
 
         friend class const_iterator;
         friend TableSupport &operator<<(TableSupport &support, size_t);
