@@ -1,8 +1,16 @@
-bobcat (2.17.01)
+bobcat (2.18.00)
 
   * Added missing Stat::operator=(Stat const &other) member. 
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 14 Jun 2011 15:23:46 +0200
+  * FnWrap* calls removed: they are now superfluous as compilers support 
+    lambda functions
+
+  * George Danchev observed that static const numeric datamembers (e.g.,
+    size_t) using in-class initialization values cause compilation errors when
+    all optimizations are switched off (-O0). These static const data members
+    were replaced by enum values.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 15 Jun 2011 11:41:52 +0200
 
 bobcat (2.17.00)
 
